# mediassistai_backend

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: aws-deploy.yaml  docker-build.yaml
api/endpoints/: chat.py
backend/: .gitignore  Dockerfile  __init__.py  main.py  pyproject.toml
backend/api/: __init__.py  api.py
backend/api/endpoints/: __init__.py  chat.py
backend/core/: __init__.py  config.py
backend/core/agents/: __init__.py  base.py  gemini.py  hermes3.py  ollama.py  openrouter.py
backend/data/: medicine.csv
backend/db/: __init__.py  session.py
backend/schemas/: __init__.py
backend/scripts/: __init__.py  seeder.py
backend/services/: __init__.py  agent_service.py  medical_service.py
core/: config.py
core/agents/: gemini.py  grok.py  openrouter.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  WelcomeScreen.jsx
services/: agent_service.py  medical_service.py
tests/: boto-test.py
