[project]
name = "mediassist-ai"
version = "0.1.0"
description = "AI-powered healthcare assistant using FastAPI and React"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "python-dotenv>=1.2.2",
    "google-genai>=1.75.0",
    "google-auth>=2.50.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "pydantic>=2.13.3",
    "websockets>=15.0.1",
    "tenacity>=9.1.4",
    "poethepoet>=0.45.0",
    "supabase>=2.29.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = []

[tool.poetry.requires-plugins]
poethepoet = ">=0.39"

[tool.poe.tasks]
dev = "uvicorn main:app --reload"
start = "uvicorn main:app --port 8000"
